# data-engineering-with-cloudflare

./: .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  wrangler-ai-gateway-proxy.toml  wrangler-embeddings.toml  wrangler-image-generation.toml  wrangler-llm-chat.toml  wrangler-rag-system.toml  wrangler-semantic-search.toml  wrangler.toml
.claude/: CLAUDE.md
.github/workflows/: dbt-ci.yml  deploy-workers.yml  elementary-monitor.yml  github-data-fetch.yml  great-expectations.yml  marimo-notebooks.yml  test-workers.yml
dbt/: .gitignore  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt_github/: README.md  dbt_project.yml  profiles.yml.example
dbt_github/seeds/: commits.csv  issues.csv  pull_requests.csv  releases.csv  repositories.csv  stargazers.csv  (+1 more)
docs/: SETUP_TODO.md  advanced-data-platform-tools.md  architecture-design.md  architecture-diagrams.md  cloudflare-ai-ml-guide.md  cloudflare-security-zerotrust.md  cloudflare-services-catalog.md  cost-analysis.md  dlt-workers-implementation.md  elementary-integration.md  evidence-cost-monitoring.md  external-services.md  github-activity-pipeline-design.md  github-data-pipeline.md  github-dbt-design.md  github-evidence-design.md  github-implementation-plan.md  github-workers-design.md  github-workers-setup.md  github-workers-testing.md  iceberg-implementation.md  iceberg-setup-guide.md  pii-detection-masking.md  programming-languages-guide.md  r2-storage-design.md  resources.md  rust-workers-guide.md  workflow-orchestration.md
evidence_dashboard/: README.md  evidence.config.yaml  package.json
great_expectations/: .gitignore  README.md  great_expectations.yml
marimo/: .gitignore  README.md  requirements.txt
scripts/: cost_calculator.py  github_pipeline.py  run_great_expectations.py  setup-cloudflare-access.sh  setup-r2-buckets.sh
terraform/: .gitignore  README.md  main.tf  outputs.tf  queues.tf  storage.tf  terraform.tfvars.example  variables.tf  workers.tf
(+59 files in other folders)
