[project]
name = "data-engineering-with-cloudflare"
version = "0.1.0"
description = "Cloudflareベースのデータ基盤プロジェクト"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # dbt dependencies
    "dbt-duckdb>=1.7.2",
    "elementary-data[duckdb]>=0.15.1",
    "sqlfluff>=3.0.0",

    # Data Quality & Validation
    "great-expectations>=0.18.12",

    # Data Processing
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",

    # Visualization & Notebooks
    "marimo>=0.9.14",
    "plotly>=5.18.0",

    # dlt pipeline dependencies
    "dlt[filesystem]>=0.4.0",

    # Apache Iceberg
    "pyiceberg>=0.6.0",

    # Cloud Storage
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Iceberg統合用の追加依存関係
iceberg = [
    "pyiceberg>=0.6.0",
    "pyarrow>=14.0.0",
    "s3fs>=2024.2.0",
]

# Workers用の軽量依存関係
workers = [
    "dlt[filesystem]>=0.4.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
